--- a/classification/sk_learn_demo/logistic_regression.ipynb
+++ b/classification/sk_learn_demo/logistic_regression.ipynb
@@ -161,7 +161,10 @@
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(C=10, class_weight=None, dual=False, fit_intercept=True,\n          intercept_scaling=1, max_iter=100, multi_class='multinomial',\n          n_jobs=1, penalty='l2', random_state=42, solver='lbfgs',\n          tol=0.0001, verbose=0, warm_start=False)"
+       "LogisticRegression(C=10, class_weight=None, dual=False, fit_intercept=True,\n",
+       "          intercept_scaling=1, max_iter=100, multi_class='multinomial',\n",
+       "          n_jobs=1, penalty='l2', random_state=42, solver='lbfgs',\n",
+       "          tol=0.0001, verbose=0, warm_start=False)"
       ]
      },
      "execution_count": 8,
@@ -240,9 +243,7 @@
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -254,23 +255,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
